--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     
     <div class="navbar">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="main.html">Home</a></li>
             <li><a href="myProjects.html">My Projects</a></li>
             <li><a href="https://github.com/AhmedTuran">My Github Account</a></li>
             <li><a href="https://www.codewars.com/users/AhmedTuran">My Code Wars Wccount</a></li>
