--- a/myProjects.html
+++ b/myProjects.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="main.html">Home</a></li>
             <li><a href="myProjects.html">My Projects</a></li>
             <li><a href="https://github.com/AhmedTuran">My Github Account</a></li>
             <li><a href="https://www.codewars.com/users/AhmedTuran">My Code Wars Wccount</a></li>
@@ -25,8 +25,11 @@
             </li>
         </ul>
     </div>
-    <div>
-    <h1>My Projects on github </h1> <br>
+    <div style="display: flex; flex-flow: row wrap;">
+        <div class="puty">
+            <div style="background-color:rgb(251, 82, 82); ">
+    <h1>My Projects on github </h1> <br></div>
+    <div style="background-color:rgb(251, 82, 82);">
     <p>
         <a href="https://github.com/AhmedTuran/checkPro">Embloyee check Project</a> ,it's an a project make able to check the ariving and leaving time <br>
     and it make able the poss to show thim times <br>
@@ -38,6 +41,11 @@
     <a href="https://github.com/AhmedTuran/htmlCodeAcadimyProject">the project code</a> ,it's an the code fore this project 
     </p>
     <p><a href="#">the JS project code</a>, it's a project can rynhbiughkf</p>
+</div></div>
+<div style="padding: 50px">
+    <img src="assets/74715701.jpg" alt="myPhoto" style=" border-radius: 50%;">
+
 </div>
+    </div>
 </body>
 </html>
