--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
             <li><a href="main.html">Home</a></li>
             <li><a href="myProjects.html">My Projects</a></li>
             <li><a href="https://github.com/AhmedTuran">My Github Account</a></li>
+            <li><a href="https://www.freecodecamp.org/Ahmed_K_Turban">My FreeCodeCamp Account</a></li>
             <li><a href="https://www.codewars.com/users/AhmedTuran">My Code Wars Wccount</a></li>
             <li class="dropdown">
             <a href="#" class="dropbtn">Call Me At <img src="assets/down_arrow_h9pr0rpdwldh.svg" alt="downArrow" style="inline-size: 15px;" > </a>
