--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
             <li><a href="https://github.com/AhmedTuran">My Github Account</a></li>
             <li><a href="https://www.freecodecamp.org/Ahmed_K_Turban">My Free Code Camp Account</a></li>
             <li><a href="https://www.codewars.com/users/AhmedTuran">My Code Wars Wccount</a></li>
+            <li><a href="https://www.codewars.com/users/AhmedTuran">My Code js project</a></li>
             <li class="dropdown">
             <a href="#" class="dropbtn">Call Me At <img src="assets/down_arrow_h9pr0rpdwldh.svg" alt="downArrow" style="inline-size: 15px;" > </a>
             <div class="dropdown-content">
