--- a/myProjects.html
+++ b/myProjects.html
@@ -41,7 +41,7 @@
     <p>
     <a href="https://github.com/AhmedTuran/htmlCodeAcadimyProject">the project code</a> ,it's an the code fore this project 
     </p>
-    <p><a href="#">the JS project code "play"</a>, it's a project can have a function can do the creat a random number and do a chick the condation <br>
+    <p><a href="https://github.com/AhmedTuran/htmlCodeAcadimyProject-/tree/main/jsProject">the JS project code "play"</a>, it's a project can have a function can do the creat a random number and do a chick the condation <br>
        and have a function do chang betwen the player as well called on Dice play discription </p>
 </div></div>
 <div style="padding: 50px">
